--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -123,7 +123,7 @@
 
 		  <span class="image featured">
 
-		    <object width="600" height="600" data="AIS_Tutoring_Spring_2016.pdf">
+		    <object width="600" height="600" data="Fall-2016.pdf">
 		    </object>
 		  </span>
 
